# routes/user_calendar_routes.py
@@ -7,3 +7,4 @@ user_calendar_bp.route('/calendar', methods=['GET'])(user_calendar_controller.ge
 user_calendar_bp.route('/calendar/custom', methods=['POST'])(user_calendar_controller.add_custom_event)
 user_calendar_bp.route('/calendar/custom/<int:event_id>', methods=['PUT'])(user_calendar_controller.update_custom_event)
 user_calendar_bp.route('/calendar/custom/<int:event_id>', methods=['DELETE'])(user_calendar_controller.delete_custom_event)
+user_calendar_bp.route('/calendar/export', methods=['GET'])(user_calendar_controller.export_user_calendar)
